sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: not found: value eccart
    if ((ecart==10)||(eccart==9)||(ecart==8)){
                      ^